--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <nav>
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">Dishes</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="#dishes">Dishes</a></li>
+              <li><a href="#today-offer">Offers</a></li>
+              <li><a href="#contact-us">Contact Us</a></li>
             </ul>
           </nav>
         </div>
@@ -36,34 +36,34 @@
 
       <!-- -- html for aricle --- -->
     
-      <article class="article1">
+      <article class="article1" id="dishes">
         <p class="title">Recent Items</p>
         <div class="recent-foods">
-          <div class="col-4">
+          <div class="col col-4">
             <img src="/Images/butterchicken.webp">
             <div class="recent-content">
               <p>Butter Chicken</p>
               <p>Rs. 250</p>
-              <button>Add</button>
+              <button class="view-item-button">Add</button>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col col-4">
             <img src="/Images/chanamasala.webp">
             <p>Chana Masala</p>
             <p>Rs. 130</p>
-            <button>Add</button>
+            <button  class="view-item-button">Add</button>
           </div>
-          <div class="col-4">
+          <div class="col col-4">
             <img src="/Images/chicken65.webp">
             <p>Chicken 65</p>
             <p>Rs. 150</p>
-            <button>Add</button>
+            <button  class="view-item-button">Add</button>
           </div>
-          <div class="col-4">
+          <div class="col col-4">
             <img src="/Images/grilledchicken.webp">
             <p>Grilled Chicken</p>
             <p>Rs. 300</p>
-            <button>Add</button>
+            <button  class="view-item-button">Add</button>
           </div>
         </div>
       </article>
@@ -73,62 +73,62 @@
     <article class="article2">
       <p class="title">Popular Items</p>
       <div class="popular-foods">
-        <div class="col-8">
+        <div class="col col-8">
           <img src="/Images/malabarfishbiryani.webp">
           <div class="recent-content">
             <p>Malabar Fish Biryani</p>
             <p>Rs. 350</p>
-            <button>Add</button>
+            <button  class="view-item-button">Add</button>
           </div>
         </div>
-        <div class="col-8">
+        <div class="col col-8">
           <img src="/Images/malaikofta.webp">
           <p>Malai Kofta</p>
           <p>Rs. 150</p>
-          <button>Add</button>
+          <button  class="view-item-button">Add</button>
         </div>
-        <div class="col-8">
+        <div class="col col-8">
           <img src="/Images/mutterpaneer.webp">
           <p>Mutter Paneer</p>
           <p>Rs. 120</p>
-          <button>Add</button>
+          <button  class="view-item-button">Add</button>
         </div>
-        <div class="col-8">
+        <div class="col col-8">
           <img src="/Images/muttonkorma.webp">
           <p>Mutton Korma</p>
           <p>Rs. 350</p>
-          <button>Add</button>
+          <button  class="view-item-button">Add</button>
         </div>
-        <div class="col-8">
+        <div class="col col-8">
           <img src="/Images/papdichaat.webp">
           <p>Papdi Chaat</p>
           <p>Rs. 75</p>
-          <button>Add</button>
+          <button  class="view-item-button">Add</button>
         </div>
-        <div class="col-8">
+        <div class="col col-8">
           <img src="/Images/samosa.webp">
           <p>Samosa</p>
           <p>Rs. 20</p>
-          <button>Add</button>
+          <button  class="view-item-button">Add</button>
         </div>
-        <div class="col-8">
+        <div class="col col-8">
           <img src="/Images/vegthali.jpg">
           <p>Veg Thali</p>
           <p>Rs. 90</p>
-          <button>Add</button>
+          <button  class="view-item-button">Add</button>
         </div>
-        <div class="col-8">
+        <div class="col col-8">
           <img src="/Images/muttonbiryani.jpg">
           <p>Mutton Biryani</p>
           <p>Rs. 320</p>
-          <button>Add</button>
+          <button  class="view-item-button">Add</button>
         </div>
       </div>
     </article>
 
     <!-- ---  article 3 todays offer code--- -->
 
-    <article>
+    <article id="today-offer">
       <p class="title">Today's Offer</p>
       <div class="best-offer">
           <img src="/Images/chickenlollipop.jpg">
@@ -137,7 +137,7 @@
           <h1>35% OFF</h1>
           <p><span>Rs. 300</span><span>Rs. 195</span></p>
           <p><br>It is one of the most loved chicken wings starters. It is essentially a recipe for crispy batter-fried chicken wings made using chicken drumettes and wingettes. The inside of these fried chicken wings is juicy and flavorful, while the exterior is superbly crispy. Served with spicy schezwan sauce or sweet chilli garlic dip, its heavenly taste will make you crave it regularly!</p>
-          <button>Add</button>
+          <button class="offer">Add</button>
         </div>
       </div>
     </article>
@@ -175,7 +175,7 @@
           <li>Join Affiliate</li>
         </ul>
       </div>
-      <div class="social">
+      <div class="social" id="contact-us">
         <p>Social Media</p>
         <ul>
           <li>Facebook</li>
